--- a/ChatterBox.Client.Presentation.Shared/Views/SettingsView.xaml
+++ b/ChatterBox.Client.Presentation.Shared/Views/SettingsView.xaml
@@ -66,7 +66,39 @@
         <ScrollViewer Grid.Row="1">
             <ItemsControl Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
                           Style="{Binding Source={StaticResource ServicesBindingHelper}, Path=LayoutService.LayoutType, Converter={StaticResource LayoutTypeToStyleConverter}}">
-                <Grid Name="WebRTCSettingsPanel" HorizontalAlignment="Stretch" MaxWidth="500" Margin="10">
+                <Grid Name="ChatterBoxSettingsPanel" MaxWidth="500"
+                      HorizontalAlignment="Stretch" Margin="10">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <TextBlock Text="ChatterBox Settings" Margin="5" HorizontalAlignment="Center" FontSize="18"
+                               FontWeight="Bold" Grid.Row="0" />
+                    <TextBlock Text="Signaling Server Host" Margin="5" Grid.Row="1" HorizontalAlignment="Left" />
+                    <TextBox Text="{Binding SignalingServerHost, Mode=TwoWay}" HorizontalAlignment="Stretch" Grid.Row="2" 
+                             behaviors:ReturnKeyCloseKeyboardBehavior.Enabled="True" />
+                    <TextBlock Text="Signaling Server Port" Margin="5" Grid.Row="3" HorizontalAlignment="Left" />
+                    <TextBox Text="{Binding SignalingServerPort, Mode=TwoWay}" HorizontalAlignment="Stretch" Grid.Row="4" 
+                             behaviors:ReturnKeyCloseKeyboardBehavior.Enabled="True" />
+                    <TextBlock Text="Domain" Margin="5" Grid.Row="5" HorizontalAlignment="Left" />
+                    <TextBox Text="{Binding Domain, Mode=TwoWay}" HorizontalAlignment="Stretch" Grid.Row="6"
+                             behaviors:ReturnKeyCloseKeyboardBehavior.Enabled="True" />
+                    <ToggleSwitch Header="AppInsight Logging" Grid.Row="7" IsOn="{Binding AppInsightsEnabled, Mode=TwoWay}"
+                      Width="Auto" MinWidth="200" Visibility="{Binding IsWin10App, Converter={StaticResource BoolToVisConverter}}"/>
+                    <TextBlock Text="About" Margin="10" HorizontalAlignment="Center" FontSize="18"
+                               FontWeight="Bold" Grid.Row="8" />
+                    <TextBlock Text="{Binding ApplicationVersion}" Margin="5" Grid.Row="9" HorizontalAlignment="Left" />
+                </Grid>
+                <Grid Name="WebRTCSettingsPanel" HorizontalAlignment="Stretch" Grid.Row="1" Grid.Column="1" 
+                      MaxWidth="500" Margin="10">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
@@ -199,37 +231,6 @@
                             </DataTemplate>
                         </ListBox.ItemTemplate>
                     </ListBox>
-                </Grid>
-                <Grid Name="ChatterBoxSettingsPanel" Grid.Row="1" Grid.Column="1" MaxWidth="500"
-                      HorizontalAlignment="Stretch" Margin="10">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                    </Grid.RowDefinitions>
-                    <TextBlock Text="ChatterBox Settings" Margin="5" HorizontalAlignment="Center" FontSize="18"
-                               FontWeight="Bold" Grid.Row="0" />
-                    <TextBlock Text="Signaling Server Host" Margin="5" Grid.Row="1" HorizontalAlignment="Left" />
-                    <TextBox Text="{Binding SignalingServerHost, Mode=TwoWay}" HorizontalAlignment="Stretch" Grid.Row="2" 
-                             behaviors:ReturnKeyCloseKeyboardBehavior.Enabled="True" />
-                    <TextBlock Text="Signaling Server Port" Margin="5" Grid.Row="3" HorizontalAlignment="Left" />
-                    <TextBox Text="{Binding SignalingServerPort, Mode=TwoWay}" HorizontalAlignment="Stretch" Grid.Row="4" 
-                             behaviors:ReturnKeyCloseKeyboardBehavior.Enabled="True" />
-                    <TextBlock Text="Domain" Margin="5" Grid.Row="5" HorizontalAlignment="Left" />
-                    <TextBox Text="{Binding Domain, Mode=TwoWay}" HorizontalAlignment="Stretch" Grid.Row="6"
-                             behaviors:ReturnKeyCloseKeyboardBehavior.Enabled="True" />
-                    <ToggleSwitch Header="AppInsight Logging" Grid.Row="7" IsOn="{Binding AppInsightsEnabled, Mode=TwoWay}"
-                      Width="Auto" MinWidth="200" Visibility="{Binding IsWin10App, Converter={StaticResource BoolToVisConverter}}"/>
-                    <TextBlock Text="About" Margin="10" HorizontalAlignment="Center" FontSize="18"
-                               FontWeight="Bold" Grid.Row="8" />
-                    <TextBlock Text="{Binding ApplicationVersion}" Margin="5" Grid.Row="9" HorizontalAlignment="Left" />
                 </Grid>
             </ItemsControl>
         </ScrollViewer>
