add "quit app " button to un-register background task and exit the app completely

--- a/ChatterBox.Client.Presentation.Shared/Views/SettingsView.xaml
+++ b/ChatterBox.Client.Presentation.Shared/Views/SettingsView.xaml
@@ -235,5 +235,6 @@
             </ItemsControl>
         </ScrollViewer>
         <Button Grid.Row="2" Content="Save" Command="{Binding SaveCommand}" HorizontalAlignment="Right" Margin="15" />
-    </Grid>
+        <Button Grid.Row="2" Content="Quit App" Command="{Binding QuitAppCommand}" HorizontalAlignment="Left" Margin="15" />
+  </Grid>
 </UserControl>
