--- a/ChatterBox.Client.Presentation.Shared/Views/ContactsView.xaml
+++ b/ChatterBox.Client.Presentation.Shared/Views/ContactsView.xaml
@@ -83,7 +83,7 @@
                                    Margin="5"
                                    Width="45"
                                    Height="45" />
-                            <TextBlock Text="{Binding Name}"
+                            <TextBlock Text="{Binding Name}" MaxWidth="250" TextTrimming="CharacterEllipsis"
                                        FontWeight="{Binding IsHighlighted, Mode=OneWay, Converter={StaticResource BoolToFontWeightConverter}}"
                                        VerticalAlignment="Center"
                                        Margin="5" />
